--- a/css/style.css
+++ b/css/style.css
@@ -67,15 +67,15 @@
             justify-content: center;
             text-align: center;
             /* background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
-            color: white;
+            color: rgb(180, 221, 181);
             margin: 0;
             max-width: 100%;
             padding-top: 5rem;
         }
 
         .hero-content h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1rem;
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
             animation: fadeInUp 1s ease;
             z-index: 1;
         }
@@ -321,15 +321,19 @@
             .hero-buttons {
                 flex-direction: column;
             }
+            
         }
 
         .abstract {
-            z-index: 0;
+            z-index: 1;
             position: absolute;
             width: 100%;
             min-height: 100vh;
         }
 
         .hero-content{
-            z-index: 1;
+            z-index: 2;
+            position: absolute;
+            /* display: flex; */
+
         }
