--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #63f184;
+            color: rgb(180, 221, 181);
         }
 
         nav ul {
@@ -67,22 +67,26 @@
             justify-content: center;
             text-align: center;
             /* background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
+            background: transparent;
             color: rgb(180, 221, 181);
             margin: 0;
             max-width: 100%;
             padding-top: 5rem;
+            backdrop-filter: blur(20px);
         }
 
         .hero-content h1 {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
+            font-size: 1.5rem;
+            margin-top: 40px;
+            margin-bottom: 0rem;
             animation: fadeInUp 1s ease;
             z-index: 1;
+            
         }
 
         .hero-content p {
             font-size: 1.5rem;
-            margin-bottom: 2rem;
+            /* margin-bottom: 2rem; */
             opacity: 0.9;
             animation: fadeInUp 1s ease 0.2s backwards;
             z-index: 1;
@@ -105,8 +109,9 @@
         }
 
         .btn-primary {
-            background: white;
-            color: #6366f1;
+            background: transparent;
+            color: #d6b3df;
+            /* border:1px solid white ; */
         }
 
         .btn-primary:hover {
@@ -294,13 +299,6 @@
             color: #4f46e5;
         }
 
-        footer {
-            background: #1f2937;
-            color: white;
-            text-align: center;
-            padding: 2rem;
-        }
-
         @media (max-width: 768px) {
             .hero-content h1 {
                 font-size: 2.5rem;
@@ -334,6 +332,7 @@
         .hero-content{
             z-index: 2;
             position: absolute;
-            /* display: flex; */
+            /* backdrop-filter: blur(5px); */
+            width: 500px;
 
         }
