--- a/css/style.css
+++ b/css/style.css
@@ -200,13 +200,13 @@ body {
 .hidden {
     display: none;
 }
-#close-lotus {
+#close-lotus, #close-about {
 position: absolute;
 top: 10px;
 right: 10px;
 font-size: 24px;
 cursor: pointer;
 }
-#close-lotus:hover {
+/* #close-lotus:hover {
 color: #000;
-}
+} */
